# meego-panel-applications

./: .gitignore  Makefile.am  NEWS  autogen.sh  configure.ac
.tx/: config
capplet/: AUTHOR
capplet/data/: Makefile.am
capplet/src/: Makefile.am  app-cc-panel.c  app-cc-panel.h
data/: Makefile.am  meego-panel-applications.schemas.in
po/: ar.po  ast.po  bn_IN.po  bs.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  en_US.po  eo.po  es.po  es_MX.po  eu.po  fa.po  fi.po  fr.po  gl.po  hu.po  id.po  it.po  ja.po  km.po  ko.po  lo.po  nl.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sv.po  th.po  tr.po  uk.po  vi.po  (+3 more)
src/: meego-netbook-launcher.c  meego-netbook-launcher.h  meego-panel-applications.c  mnb-launcher-button.c  moblin-netbook-launcher.c  moblin-panel-applications.c
